<resources>
  <string name="app_name">DSS 2019 (Surveillance Round 6)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="add_family"> فیملی کا اندراج </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="dcstatus"> انٹریو کا نتیجہ</string>
    <string name="complete"> مکمل</string>
    <string name="incomplete">نا مکمل</string>
    <string name="doorlocked">گھر لاک ہے</string>
    <string name="secALabel">HH Identification and Visit Status</string>
    <string name="sec2A"> سیکشن 2A: بنیادی معلومات </string>
    <string name="secBLabel">  سیکشن بی: خاندان کے تمام افراد کی فہرست </string>
    <string name="secCLabel"> سیکشن سی:گزشتہ ایک سال کے دوران انتقال ہونے والے  افراد</string>
    <string name="secDLabel">سیکشن ڈی: گھر کی تعمیر</string>
    <string name="secELabel">سیکشن ای : ہاتھ دھونا</string>
    <string name="secFLabel">سیکشن ایف :منتخب شدہ ماؤں کی گزشتہ تولیدی معلومات</string>
    <string name="secGLabel">سیکشن جی :خاندانی منصوبہ بندی(حمل کی تفصیلات کی طرف جائیں ) </string>
    <string name="secHLabel">سیکشن ایچ : خاندانی منصوبہ بندی کی ضرورت جو پوری نہ ہوسکی</string>
    <string name="secILabel">سیکشن آئی :شیر خوار اور بڑے بچوں کی غذا</string>
    <string name="secJLabel">سیکشن  جے: بچے کی صحت کی معلومات</string>
    <string name="secKLabel"> سیکشن کے:حفاظتی ٹیکے</string>
    <string name="secLLabel">سیکشن ایل :گھریلو خوراک کی غیر محفوظی ، خوراک کا استعمال اور تبدل</string>
    <string name="dcl2heading"> خاندان کی غذا کی کمی سے نمنٹے کی حکمت عملی </string>
    <string name="dcl3heading"> بھوک کا پیمانہ ( گزشتہ ایک ماہ کے متعلق) </string>
    <string name="secMLabel">سیکشن ایم: گھر کا ماحول</string>
    <string name="dstudyid">Study ID</string>
    <string name="days">دنوں کی تعداد</string>
    <string name="correct"> صحیح ہے </string>
    <string name="notcorrect"> صحیح نہیں ہے </string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dcother">دیگر(وضاحت کریں)</string>
    <string name="dcdkn">معلوم نہیں</string>
    <string name="dcyes">ہاں</string>
    <string name="dcno">نہیں</string>
    <string name="dcna">قابل اطلاق نہیں</string>
    <string name="dctimes">تعداد</string>
    <string name="dcmale"> مرد </string>
    <string name="dcfemale"> عورت </string>
    <string name="dnbboy"> لڑکا</string>
    <string name="dnbgirl"> لڑکی </string>
    <string name="Frequency"> تعداد </string>
    <string name="dcpro01">پروفیشنل / ٹیکنیکل / مینیجریل</string>
    <string name="dcpro02">کلرک</string>
    <string name="dcpro03">سہولتیں مہیا کرنا</string>
    <string name="dcpro04">مستری</string>
    <string name="dcpro05">مزدور</string>
    <string name="dcpro06">گھریلو نوکر</string>
    <string name="dcpro07">ذراعت</string>
    <string name="dcpro08">کاروبار</string>
    <string name="dcpro09">چھوٹی دکان / چھوٹا کاروبار</string>
    <string name="dcpro10">بیروزگار</string>
    <string name="dcpro11">رٹائرڈ</string>
    <string name="dcpro12">ہائوس وائف</string>
    <string name="dcitimes">کل دن یا رات میں کتنی بار استعمال کیا تھا؟</string>
    <string name="eventlbl"> EVENTS </string>
    <string name="hhno"> Household no </string>
    <string name="dca03">3) DSS ID </string>
    <string name="dca04">4۔ کیا اجازت مل گئی؟ </string>
    <string name="nblr"> کیا اجازت مل گئی؟ </string>
    <string name="dca0403"> گھر بند ہے / اجازت دینے والا موجود نہیں ہے۔ </string>
    <string name="dca05">5)  جواب دہندہ کا نام </string>
    <string name="dca0501"> جنس </string>
    <string name="dca0502"> رشتہ </string>
    <string name="dca050201"> ماں </string>
    <string name="dca050202"> دیکھ بھال کرنیوالا </string>
    <string name="dca0503"> عمر </string>
    <string name="dca0504"> تعلیم </string>
    <string name="dca0505"> پیشہ </string>
    <string name="dca06">6) گھر کے سربراہ کا نام </string>
    <string name="dca0601"> جنس </string>
    <string name="dca060101"> مرد </string>
    <string name="dca060102"> عورت </string>
    <string name="dca0602"> عمر </string>
    <string name="dca0603"> تعلیم </string>
    <string name="dca0604"> پیشہ </string>
    <string name="dca07">7) اس گھر میں آپ کے ساتھ اور کتنے افراد رہتے ہیں؟ (بچوں کو شامل کر کے تعداد بتائیں) </string>
    <string name="dca0701"> ٹوٹل </string>
    <string name="dca0702"> مرد </string>
    <string name="dca0703"> عورتیں </string>
    <string name="dca08">8) اس گھر میں پانچ سال سے کم عمر کے کتنے بچے ہیں؟ </string>
    <string name="dca0801"> ٹوٹل </string>
    <string name="dca0802"> بچے </string>
    <string name="dca0803"> بچیاں </string>
    <string name="dca09"> 9) آپ کا گھرانہ یہاں کتنے عرصے سے رہائش پزیر ہے؟
    (ایک سال سے کم ہوتو مہینوں میں لکھیں) </string>
    <string name="dca0901"> پیدائش سے </string>
    <string name="dca0902"> 2010سے قبل </string>
    <string name="dca0903"> دوسرے علاقے سے ہجرت کی ہے </string>
    <string name="dca09m"> مہینے </string>
    <string name="dca09y"> سال </string>
    <string name="dca10">10) آپ کا گھرانہ یہاں ہجرت کرنے سے پہلے کہاں رہائش پذیر تھا؟ </string>
    <string name="dca10a"> شہر کا نام لکھیں</string>
    <string name="dca10b">جگہ کا نام لکھیں</string>
    <string name="dca11">11) آپ کا خاندانی نظام کس طرح کا ہے؟ </string>
    <string name="dca1101"> انفرادی </string>
    <string name="dca1102"> مشترکہ </string>
    <string name="dcba"> گھر کے فرد کا نام </string>
    <string name="dcbid"> شناختی نمبر </string>
    <string name="edt_dcbid"> شناختی نمبر میں غلطی کا موقف </string>
    <string name="dcbb"> رشتے کی شناخت </string>
    <string name="dcbbrhh"> گھر کے سربراہ سے رشتہ </string>
    <string name="dcbbrhh01"> سربراہ </string>
    <string name="dcbbrhh02"> میاں یا بیوی </string>
    <string name="dcbbrhh03"> بیٹا یا بیٹی </string>
    <string name="dcbbrhh04"> داماد/ بہو </string>
    <string name="dcbbrhh05"> پوتا/ پوتی </string>
    <string name="dcbbrhh06"> ماں باپ </string>
    <string name="dcbbrhh07"> ساس سسر </string>
    <string name="dcbbrhh08"> بھائی بہن </string>
    <string name="dcbbrhh09"> دوسرے رشتہ دار </string>
    <string name="dcbbrhh10"> گود لیا گیا / سوتیلا بچہ </string>
    <string name="dcbbrhh11"> غیر متعلقہ افراد </string>
    <string name="dcbbfid"> والد </string>
    <string name="dcbbmid"> والدہ </string>
    <string name="dcbbhid"> شوہر </string>
    <string name="dcbc"> ازدواجی حیثیت </string>
    <string name="dcbc01"> شادی شدہ </string>
    <string name="dcbc02"> طلاق یافتہ یا الگ رہنا </string>
    <string name="dcbc03"> بیوہ / رنڈو۱ </string>
    <string name="dcbc04"> غیر شادی شدہ </string>
    <string name="dcbd"> جنس </string>
    <string name="dcbdm"> مرد </string>
    <string name="dcbdf"> عورت </string>
    <string name="dcbe"> تعلیم </string>
    <string name="dcbm"> ارکان کی موجودہ حیثیت </string>
    <string name="dcbm01"> شادی شدہ عورت </string>
    <string name="dcbm01a"> عورت </string>
    <string name="dcbm02"> شوہر </string>
    <string name="dcbm03"> بچہ </string>
    <string name="dcbm04"> دیگر افراد </string>
    <string name="dcbe01"> غیر تعلیم یافتہ/ناخواندہ </string>
    <string name="dcbe02"> ابتدائی تعلیم پانچ سال سے کم </string>
    <string name="dcbe03"> پرائمری اسکول پانچ سال تک پڑھے ہوئے </string>
    <string name="dcbe04"> آٹھویں تک </string>
    <string name="dcbe05"> میٹرک تک </string>
    <string name="dcbe06"> انٹر تک </string>
    <string name="dcbe07"> بی اے اور اس سے زیادہ </string>
    <string name="dcbe08"> مدرسہ </string>
    <string name="dcbe09"> پانچ سال سے کم تعلیم یافتہ </string>
    <string name="dcbf"> شعبہ </string>
    <string name="dcbf01"> تجارت </string>
    <string name="dcbf02"> گاڑی چلانے والا </string>
    <string name="dcbf03"> مچھیرا </string>
    <string name="dcbf04"> کسان </string>
    <string name="dcbf05"> مزدور </string>
    <string name="dcbf06"> سرکاری ملازم </string>
    <string name="dcbf07"> ہنر مند افراد </string>
    <string name="dcbf08"> زمیندار/غیر سرکاری ملازمت </string>
    <string name="dcbf09"> گھرمیں رہنے والی خواتین </string>
    <string name="dcbf10"> دکاندار </string>
    <string name="dcbf11"> طالبعلم </string>
    <string name="dcbf12"> استاد </string>
    <string name="dcbf13"> ٹھیکدار </string>
    <string name="dcbf14"> بیروزگار </string>
    <string name="dcbf15"> ریٹائرڈ </string>
    <string name="dcbf16"> غیر سرکاری ملازمت </string>
    <string name="dcbf17"> فیکٹری میں کام کرنےوالے </string>
    <string name="dcAge"> تاریخ پیدائش  /  عمر </string>
    <string name="dcbg"> تاریخ پیدائش </string>
    <string name="dcAgeatDeath"> تاریخ پیدائش / وفات کی عمر </string>
    <string name="dcbh"> عمر </string>
    <string name="dcbhy"> سال </string>
    <string name="dcbhm"> مہینہ </string>
    <string name="dcbhd"> دن </string>
    <string name="dcbi"> موجودہ حیثیت </string>
    <string name="dcbis"> حالات کی تبدیلی </string>
    <string name="dcbis01"> پیدائش </string>
    <string name="dcbis01Status"> موجودہ حیثیت </string>
    <string name="dcbis01Statusa"> Still exist and live with us </string>
    <string name="dcbis01Statusb"> Child recently Death </string>
    <string name="dcbis01Statusc"> Adaopted by other family </string>
    <string name="dcbis02"> اندرونی ہجرت </string>
    <string name="dcbis03"> بیرونی ہجرت </string>
    <string name="dcbis03a"> علاقے کا نام </string>
    <string name="dcbis04"> اندورنی علاقے میں ہی ایک جگہ سے دوسری جگہ منتقل ہونا </string>
    <string name="dcbis05"> موت </string>
    <string name="dcbis06"> طلاق </string>
    <string name="dcbis07"> ازواجی حیثیت </string>
    <string name="dcbis0701"> ازدواجی حیثیت میں تبدیلی </string>
    <string name="dcca"> مرنے والوں کے نام </string>
    <string name="dccb"> رشتے کی شناخت </string>
    <string name="dccbrhh"> گھر کے سربراہ سے رشتہ </string>
    <string name="dccbrhh01"> سربراہ </string>
    <string name="dccbrhh02"> بیوی یا شوہر </string>
    <string name="dccbrhh03"> بیٹا یا بیٹی </string>
    <string name="dccbrhh04"> داماد / بہو </string>
    <string name="dccbrhh05"> پوتا / پوتی/ نواسا /نواسی </string>
    <string name="dccbrhh06"> ماں / باپ </string>
    <string name="dccbrhh07"> سسر / ساس </string>
    <string name="dccbrhh08"> بھائی یا بہن </string>
    <string name="dccbrhh10"> گود لیا گیا / سوتیلا بچہ </string>
    <string name="dccbrhh11"> کوئی رشتہ نہیں </string>
    <string name="dccc"> جنس </string>
    <string name="dccc01"> مرد </string>
    <string name="dccc02"> عورت </string>
    <string name="dccd"> تاریخ پیدائش </string>
    <string name="dcce"> وفات کی عمر </string>
    <string name="dccey"> سال </string>
    <string name="dccem"> مہینہ </string>
    <string name="dcced"> دن </string>
    <string name="dccf"> تاریخ وفات </string>
    <string name="dccg"> تبصرہ </string>
    <string name="dcch"> اگر مرنے والی 15 سے 49 سال کی عورت ہے تو </string>
    <string name="dcch01"> غیر شادی شدہ </string>
    <string name="dcch02"> حاملہ عورت </string>
    <string name="dcch03"> حاملہ نہیں </string>
    <string name="dcch04"> حمل سے پہلے </string>
    <string name="dcch05"> حمل کے بعد 42 دن کے اندر </string>
    <string name="dsaHeading01"> PW ASSESMENT </string>
</resources>