<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_section_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.aku.hassannaqvi.dss_census.SectionCActivity">

    <ScrollView
        android:id="@+id/scrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/secCLabel"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dcca"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/dcca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dcca" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dccb"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="#efefef"
                android:padding="2dp"
                android:text="@string/dccbrhh"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/dccbrhh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/dccbrhh01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh01" />

                <RadioButton
                    android:id="@+id/dccbrhh02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh02" />

                <RadioButton
                    android:id="@+id/dccbrhh03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh03" />

                <RadioButton
                    android:id="@+id/dccbrhh04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh04" />

                <RadioButton
                    android:id="@+id/dccbrhh05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh05" />

                <RadioButton
                    android:id="@+id/dccbrhh06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh06" />

                <RadioButton
                    android:id="@+id/dccbrhh07"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh07" />

                <RadioButton
                    android:id="@+id/dccbrhh08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh08" />

                <RadioButton
                    android:id="@+id/dccbrhh09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcother" />

                <RadioButton
                    android:id="@+id/dccbrhh10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh10" />

                <RadioButton
                    android:id="@+id/dccbrhh11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccbrhh11" />

                <RadioButton
                    android:id="@+id/dccbrhh98"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcdkn" />

                <RadioButton
                    android:id="@+id/dccbrhh99"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcna" />

            </RadioGroup>

            <EditText
                android:id="@+id/dccbrhh09x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dcother"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/dcbbfid"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dccbfid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/dcbbfid" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/dcbbmid"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dccbmid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/dcbbmid" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dccc"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />


            <RadioGroup
                android:id="@+id/dccc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/dccc01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccc01" />

                <RadioButton
                    android:id="@+id/dccc02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccc02" />
            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dccd"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <DatePicker
                android:id="@+id/dccd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:ems="10"
                android:spinnersShown="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dcAgeatDeath"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />


            <RadioGroup
                android:id="@+id/dccdod"
                style="@style/radiogroup"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary">

                <RadioButton
                    android:id="@+id/dccage01"
                    style="@style/radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcce" />

                <RadioButton
                    android:id="@+id/dccdod02"
                    style="@style/radiobutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dccf" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/fldGrpdccage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dcce"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/dccey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dccey"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/dccem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dccem"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/dcced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dcced"
                android:inputType="number"
                android:maxLength="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fldGrpdccdod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dccf"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <DatePicker
                android:id="@+id/dccf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:ems="10"
                android:spinnersShown="true" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dccg"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/dccg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dccg" />

            <LinearLayout
                android:id="@+id/fldGrpdcch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/dcch"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/dcch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/dcch01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcch01" />

                <RadioButton
                    android:id="@+id/dcch02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcch02" />

                <RadioButton
                    android:id="@+id/dcch03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcch03" />

                <RadioButton
                    android:id="@+id/dcch04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcch04" />

                <RadioButton
                    android:id="@+id/dcch05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dcch05" />
            </RadioGroup>

            </LinearLayout>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="endInterview"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="startInterview"
                    android:text="@string/start_interview"
                    android:textColor="#1ed61e" />
                <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
