<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.aku.hassannaqvi.dss_census_sur.activities.PWAssessmentActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.dss_census_sur.activities.PWAssessmentActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/dsaHeading01"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> callback.BtnEnd()}"
                        android:text="@string/end_interview"
                        android:textColor="#ff1e1e" />

                    <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> callback.BtnContinue()}"
                        android:text="@string/nextSection"
                        android:textColor="#1ed61e" />
                    <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
